--- a/layouts/studentBoilerplate.ejs
+++ b/layouts/studentBoilerplate.ejs
@@ -29,7 +29,7 @@
         </div>
         <div class="offcanvas-body">
             <div class="nav-element">
-                <a href="/student/courses">Dashboard</a>
+                <a href="/studentAttendance/<%currUser._id%>">Dashboard</a>
             </div>
             <div class="nav-element">
                 <a href="/student/download">Download</a>
